# Practica

./: .gitignore  README.md  docker-compose.minio.yml  env.example  pom.xml
.github/workflows/: ci.yml  practices-cpp.yml
docs/: binary-api-antivirus.md  eds-github-secrets.md  er-antivirus.md  er-licenses.md  signature-files-minio.md
practices/: README.md
practices/Practice2_1/: .gitignore  CMakeLists.txt  README.md
practices/Practice2_1/src/: main.cpp
src/main/java/ru/mtuci/coursemanagement/: CourseManagementApplication.java
src/main/java/ru/mtuci/coursemanagement/config/: DemoUsersInitializer.java  JwtProperties.java
src/main/java/ru/mtuci/coursemanagement/controller/: AuthController.java
src/main/java/ru/mtuci/coursemanagement/dto/: LoginRequest.java  RefreshRequest.java  RegisterRequest.java  TokenResponse.java
src/main/java/ru/mtuci/coursemanagement/eds/: EdsDetachedSigner.java  EdsSigningMaterials.java
src/main/java/ru/mtuci/coursemanagement/model/: AppUser.java  RefreshToken.java  Role.java
src/main/java/ru/mtuci/coursemanagement/repository/: AppUserRepository.java  RefreshTokenRepository.java
src/main/java/ru/mtuci/coursemanagement/security/: JwtAuthenticationFilter.java  JwtService.java  SecurityConfiguration.java
src/main/resources/: application.yaml
src/main/resources/templates/: index.html
src/test/java/ru/mtuci/coursemanagement/: AntivirusBinaryExportIntegrationTest.java  AntivirusSignatureIntegrationTest.java  LicenseLifecycleIntegrationTest.java  Rfc8785TicketCanonTest.java  SecurityApiSmokeTest.java
(+61 files in other folders)
